# csci5180-lab10-automation

./: .gitignore  README.md  lab_tools.py  phases.md  pyproject.toml  topology_schema.py
.github/workflows/: ci.yml
containerlab/: .gitignore  lab10.clab.yml
data/: inventory.containerlab.yaml  inventory.example.yaml  topology.containerlab.yaml  topology.yaml
scripts/: __init__.py  clab_twin.py  push.py  render.py  verify.py
templates/: gateway.j2  leaf.j2  spine.j2
tests/: test_containerlab.py  test_lab.py  test_render.py
