[project]
name = "lab10-automation"
version = "0.1.0"
description = "Spine–leaf config rendering and network automation (Lab10)"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
exclude = [".venv", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/render.py" = ["E402"]
"tests/test_render.py" = ["E402"]
